# skinlearn-dev

./: .gitignore  README.md  hardware_interface.h
ice_experimenter/: CMakeLists.txt  package.xml
ice_experimenter/cfg/: experiment.yaml  experiment_nn.yaml
ice_experimenter/launch/: ice_experimenter.launch  load_parameters.launch
ice_experimenter/src/: keyboard.cpp
ice_msgs/: CMakeLists.txt  README.md  package.xml
ice_msgs/msg/: CartVec.msg  JointVec.msg  combinedError.msg  controllerFullData.msg  controllerParam.msg  controllerState.msg  experimentDataA.msg  experimentDataB.msg  experimentDataC.msg  filterWeights.msg  neuroControllerState.msg  twoLayerNN.msg
ice_msgs/srv/: fixedWeightToggle.srv  getNNweights.srv  getState.srv  setCartPose.srv  setCarteDofMatrix.srv  setCircleRate.srv  setGains.srv  setInteger.srv  setNNweights.srv  setParameters.srv  setTrajectory.srv  setValue.srv  tactileCalibration.srv  tactileFilterWeights.srv
ice_robot_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
ice_robot_controllers/config/: l_ft_calib_data.yaml  pr2_controller.yaml  rbf_nn.yaml
ice_robot_controllers/include/: jt_cartesian_controller.cpp  objTest.h
ice_robot_controllers/include/csl/: MsdModel.h  RlsModel.h  math.h  neural_network.hpp  nn_controller.cpp  nn_estimator.cpp  one_layer_nn.hpp  outer_loop.h  rbf_nn.hpp  two_layer_nn.hpp
ice_robot_controllers/include/ice_robot_controllers/: EigenConversions.h  KDLcontroller.h  adaptNeuroController.h  cartesianController.h  cartneuroController.h  digitalFilter.h  jt_cartesian_controller.cpp  outer_loop.h
ice_robot_controllers/include/oel/: least_squares.hpp
ice_robot_controllers/launch/: adaptNeuroController.launch  cartneuroController.launch  load_parameters.launch
ice_robot_controllers/src/: adaptNeuroController.cpp  cartesianController.cpp  cartneuroController.cpp  digitalFilter.cpp  outer_loop.cpp  test_digitalFilter.cpp
ice_sensors/: CMakeLists.txt  package.xml
ice_sensors/config/: tactileArray.rviz  tactileBox.yaml
ice_sensors/include/ice_sensors/: tactile_serial.h
ice_sensors/launch/: rviz.launch  tactileBox.launch
ice_sensors/src/: bluetac_serial.cpp
neuroAdaptiveSim/: CMakeLists.txt  (+5 more)
pr2_cart/: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
pr2_cart/config/: pr2_cart.yaml
pr2_cart/include/pr2_cart/: pr2_cart.h  pr2_cart_manager.h
pr2_cart/launch/: pr2_cart.launch  start.launch
pr2_cart/src/: ft_simulation.cpp  keyboard.cpp  pr2_cart.cpp  pr2_cart_manager.cpp
uta_pr2_forceControl/: CMakeLists.txt  DATA_COLLECTION_DOC.txt  NNCartesianFTSensorForceNoFeedForwardTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-02-01-58.bag  NNCartesianFTSensorForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-01-02-26.bag  NNCartesianFTSensorForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-01-08-50.bag  NNCartesianFTSensorForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-01-52-46.bag  NNCartesianSinXForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-00-44-52.bag  NNCartesianSinXForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-00-49-25.bag  NNSinWaveDirectTrajKv10lambda0.1_2013-09-12-06-50-52.bag  NNSinWaveDirectTrajKv50lambda0.01_2013-09-12-06-45-09.bag  NNSinWaveDirectTrajkappa0.07Kv30lambda0.01Kz3Zb100_2013-09-12-07-02-29.bag  NNTrajImpedanceForceNoFeedForwardTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-02-18-18.bag  NNTrajImpedanceForceNoFeedForwardTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-03-36-49.bag  NNTrajImpedanceForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-01-27-39.bag  NNTrajImpedanceForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-01-45-33.bag  NNVanDerPolForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-00-02-50.bag  NNVanDerPolForceTrajkappa0.07Kv10lambda0.5Kz0Zb100_2013-09-13-00-32-08.bag  NNVanDerPolForceTrajkappa0.07Kv10lambda1Kz0Zb100_2013-09-13-00-28-04.bag  NNVanDerPolForceTrajkappa0.07Kv10lambda5Kz0Zb100_2013-09-13-00-20-04.bag  NoNNSinWaveDirectTrajKv100lambda0.01_2013-09-12-06-40-00.bag  README.md  SinWaveDirectTrajkappa0.07Kv100lambda0.01Kz3Zb100_2013-09-12-06-28-02.bag  cart_controller.yaml  cartneuroController.launch  controller_plugins.xml  default_pr2_controller.yaml  mainpage.dox  manifest.xml  pr2_controller.yaml  pr2_controller_cart.launch  wristForceTorque.cpp
uta_pr2_forceControl/DATA/: NNCartesianFTSensorForce_2013-09-15-00-27-18.bag  experimentLOG.txt
uta_pr2_forceControl/experiments/: experimentParameterFile.yaml
uta_pr2_forceControl/include/: SystemModel.h  controllerFullData.pb.h  kinematichelpers.h  objTest.h  pinv.hpp  rbdl_urdfreader.h  wristForceTorque.h
uta_pr2_forceControl/include/csl/: CtRlsModel.h  IrlModel.h  JSpaceMsdModel.h  MracModel.h  RlsModel.h  math.h  neural_network.hpp  one_layer_nn.hpp  outer_loop.h  two_layer_nn.hpp
uta_pr2_forceControl/launch/: cartesianController.launch  cartresnnController.launch  computedTorqueController.launch  controllerTestClient.launch  defaultCartesianController.launch  explforceController.launch  impedanceController.launch  neuroadptController.launch  pidController.launch  pr2_kinect.launch  refTrajectoryClient.launch  runExperiments.launch
uta_pr2_forceControl/msg/: controllerFullData.msg  controllerParam.msg
uta_pr2_forceControl/proto/: controllerFullData.proto
uta_pr2_forceControl/script/: pr2_joint.py
uta_pr2_forceControl/src/: SystemModel.cpp  acceleration_observer.cpp  cartesianController.cpp  cartneuroController.cpp  cartresnnController.cpp  computedTorqueController.cpp  controllerExperimenter.cpp  controllerFullData.pb.cc  controllerTestClient.cpp  explforceController.cpp  forceController.cpp  impedanceController.cpp  intentEstimator_test.cpp  interaction_force_estimator.cpp  kalman_estimate.cpp  kinematichelpers.cpp  least_squares.cpp  neural_network.cpp  neuroadptController.cpp  odeTest.cpp  pidController.cpp  position_rarm.cpp  pr2_joint_listener.cpp  rbdl_urdfreader.cc  refTrajectoryClient.cpp  wristForceTorque.cpp
uta_pr2_forceControl/srv/: fixedWeightToggle.srv  saveControllerData.srv
uta_pr2_forceControl/test/: irlTest.cpp  kronTest.cc
(+122 files in other folders)
