<?xml version="1.0"?>
<package>
  <name>ice_robot_controllers</name>
  <version>0.0.0</version>
  <description>The ice_robot_controllers package</description>
  <maintainer email="sven.cremer@mavs.uta.edu">Sven Cremer</maintainer>

  <license>BSD</license>
  
  <author>Isura Ranatunga</author>
  <author>Sven Cremer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_toolbox</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>ice_msgs</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_gripper_sensor_controller</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>control_toolbox</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>ice_msgs</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_gripper_sensor_controller</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
  
</package>
