<?xml version="1.0"?>
<package>
  <name>pr2_cart</name>
  <version>0.0.0</version>
  <description>The pr2_cart package</description>
  <maintainer email="sven.cremer@mavs.uta.edu">Sven Cremer</maintainer>

  <license>BSD</license>
  
  <author>Sven Cremer</author>
  <author>Isura Ranatunga</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ice_msgs</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>ice_msgs</run_depend>
  
  <build_depend>apc_robot</build_depend>
  <run_depend>apc_robot</run_depend>


  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
  
</package>
